Development Portal (2025-09-01 shi)
==============================
Fix footer with Useful and Additional sections
Fix padding for SAVi with new footer
Fix black text on black in Dash


Development Portal (2025-08-27 shi)
==============================
Fix dquery css
Update footer
Fix header css
Fix stats css
Remove utter
Remove theme dropdown
Remove background image !important to be updated


Development Portal (2025-07-31 shi)
==============================
Help Docs is back


Development Portal (2025-07-29 shi)
==============================
Add font
Remove FAQ
Replace Help Docs with FAQ


Development Portal (2025-06-25 shi)
==============================
Update header and footer for new view 
Update cc year in footer


Development Portal (2025-03-06 shi)
==============================
Update d-preview link


Development Portal (2025-02-24 shi)
==============================
Update related_dupe stream css


Development Portal (2025-02-22 shi)
==============================
Update stream css


Development Portal (2025-02-18 shi)
==============================
Update stream css


Development Portal (2025-02-18 shi)
==============================
Update new stats table css
Update publisher stream css


Development Portal (2025-02-16 shi)
==============================
Add stream numbers


Development Portal (2025-02-14 shi)
==============================
Stream styles


Development Portal (2025-01-16 shi)
==============================
Update new stats for current theme
Update translations
Update print-friendly
Update value column width for org file total budget


Development Portal (2025-01-15 shi)
==============================
Display new stats with tables for white version


Development Portal (2025-01-09 shi)
==============================
Add social icons to footer
Update main_head for original and white versions
Update light grey background
Update status section
Add theme dropdown


Development Portal (2025-01-08 shi)
==============================