@@ -8,3 +8,4 @@ a.about_data { display:none; }
 .crumb_wrap { display:none; }
 
 .overlay				{padding-bottom:80px;}
+.footer_copyright		{width:45%; line-height:1.25em; text-align:center;}
