@@ -391,6 +391,8 @@ a.data_invest:hover		{color:rgba(46,46,46,1); background-color:rgba(65,228,235,1
 .footer_link.footer_white.footer_copy	{display:flex; align-items:center; justify-content:space-between; padding:2em 0;}
 .footer_link.footer_white.footer_copy a	{text-decoration:none;}
 
+.footer_copyright		{width:45%; line-height:1.25em; text-align:center;}
+
 
 /*	SAVi CSS
 	============================================= */
