@@ -109,7 +109,7 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 		<div class="footer">
 			<div class="footer_link footer_block footer_copy nunito-sans-600">
 				<a href="https://iatistandard.org/en/privacy-policy/">{footer27_text}</a>
-				<div>{footer28_text}</div>
+				<div class="footer_copyright">{footer31_text}</div>
 				<a onclick="$('html,body').animate({ scrollTop:0},'slow');return false;">{footer_top_text}</a>
 				{large_footer_social}
 			</div>
@@ -133,7 +133,6 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 <div class="footer_header hanken-grotesk-700">{footer26_text}</div>
 {base_stats_text}
 {publisher_slug&&footer_publisher_link||}
-<p>{footer31_text}</p>
 
 
 #footer_publisher_link
