@@ -3,6 +3,7 @@ Development Portal (2025-09-01 shi)
 Fix footer with Useful and Additional sections
 Fix padding for SAVi with new footer
 Fix black text on black in Dash
+Update to long copyright
 
 
 Development Portal (2025-08-27 shi)
